<resources>
    <string name="app_name">RDT Camera</string>
    <string name="title_activity_label_screen">LabelScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next">Next</string>
    <string name="retake">Retake</string>
    <string name="get_result">Capture</string>
    <string name="save">Save</string>
    <string name="mode">Mode</string>
    <string name="flash">Flash</string>
    <string name="view_tracked_rdt">View tracked rdt</string>
    <string name="send_image">send image</string>
    <string name="main_rdt_view">Main rdt view</string>
</resources>
