<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.iprd.rdtcamera.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/getResult"/>

    <SurfaceView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/surfaceView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/getResult"

        />

    <ImageView
        android:id="@+id/rdtRect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/rect"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/getResult"
        android:contentDescription="@string/main_rdt_view" />


    <!--

        android:layout_alignParentLeft="true"
        android:visibility="visible"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    -->

    <TextView
        android:id="@+id/MotionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/RdtTrackedImage"
        app:layout_constraintEnd_toStartOf="@+id/preferenceSettingBtn" />

    <!--<TextView
        android:id="@+id/RdtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Please place RDT in RedBox"
        android:textColor="@color/colorGreen"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/texture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texture" />-->



    <ImageView
        android:id="@+id/RdtTrackedImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#00682222"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferenceSettingBtn"
        android:contentDescription="@string/view_tracked_rdt" />

    <ImageView
        android:id="@+id/sendingImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferenceSettingBtn"
        android:contentDescription="@string/send_image" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorGrey"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="invisible"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/torch"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Switch
        android:id="@+id/torch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/flash"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/texture" />


    <Button
        android:id="@+id/preferenceSettingBtn"
        android:layout_width="19dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/wthreedots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rdtDataToBeDisplay"
        android:layout_width="175dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00ffffff"
        android:text=""
        android:textColor="@color/colorBlue"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/texture"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_result"
        android:visibility="visible"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/torch"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        />



    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/retake"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/getResult"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="@id/getResult"
        app:layout_constraintEnd_toEndOf="@id/getResult"/>


    <TableLayout
        android:id="@+id/gridTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        app:layout_constraintDimensionRatio="H,9:16"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-40dp"
        tools:layout_editor_absoluteY="-69dp"
        tools:visibility="invisible">


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>